Added Docker build.